--- a/apps/demo/src/app/app.component.html
+++ b/apps/demo/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-nx-welcome></app-nx-welcome> <router-outlet></router-outlet>
+<!-- <app-nx-welcome></app-nx-welcome> <router-outlet></router-outlet> -->
+<dtfe-layout-normal>
+  <div sidemenu>My Menu</div>
+  <div content>My Content</div>
+</dtfe-layout-normal>
